--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem eveniet nulla ipsum veniam facere voluptates minus placeat tempore quae, incidunt cumque, saepe, explicabo provident harum eaque enim consequatur temporibus esse.</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque perspiciatis minus rerum quos, modi accusamus earum accusantium vitae quisquam quidem voluptates? Odio, tempora. Beatae ab sit sequi amet, cumque explicabo.</p>
 </body>
 </html>
