--- a/index.html
+++ b/index.html
@@ -6,7 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem eveniet nulla ipsum veniam facere voluptates minus placeat tempore quae, incidunt cumque, saepe, explicabo provident harum eaque enim consequatur temporibus esse.</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque perspiciatis minus rerum quos, modi accusamus earum accusantium vitae quisquam quidem voluptates? Odio, tempora. Beatae ab sit sequi amet, cumque explicabo.</p>
+    <header>
+        <nav>
+        <a href="">SIMPLY CHOCOLATE 
+            <img src="./img/chocolate-icon.svg" alt="chocolate icon">
+        </a>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">How it’s made?</a></li>
+            <li><a href="">Chocolate is loved</a></li>
+        </ul>
+        </nav>
+        <ul>
+            <li><a href="" target="_blank" rel="noopener noreferrer">instagram</a></li>
+            <li><a href="" target="_blank" rel="noopener noreferrer">facebook</a></li>
+            <li><a href="" target="_blank" rel="noopener noreferrer">twiter</a></li>
+        </ul>
+    </header>
 </body>
 </html>
