--- a/index.html
+++ b/index.html
@@ -3,30 +3,60 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,400;0,600;0,700;1,700&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Document</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html"
+    <header class="header">
+      <nav class="header-navigation">
+        <a class="header-logo" href="./index.html"
           >SIMPLY CHOCOLATE
-          <img src="./img/chocolate-icon.svg" alt="chocolate icon" />
+          <img
+            class="header-logo-img"
+            src="./img/chocolate-icon.svg"
+            alt="chocolate icon"
+          />
         </a>
-        <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">How it’s made?</a></li>
-          <li><a href="">Chocolate is loved</a></li>
+        <ul class="header-menu-list">
+          <li class="header-menu-item"><a href="">Home</a></li>
+          <li class="header-menu-item"><a href="">How it’s made?</a></li>
+          <li class="header-menu-item"><a href="">Chocolate is loved</a></li>
         </ul>
       </nav>
-      <ul>
-        <li>
-          <a href="" target="_blank" rel="noopener noreferrer">instagram</a>
+      <ul class="header-soc-list">
+        <li class="header-soc-item">
+          <a
+            class="header-soc-link"
+            href=""
+            target="_blank"
+            rel="noopener noreferrer"
+            >instagram</a
+          >
         </li>
-        <li>
-          <a href="" target="_blank" rel="noopener noreferrer">facebook</a>
+        <li class="header-soc-item">
+          <a
+            class="header-soc-link"
+            href=""
+            target="_blank"
+            rel="noopener noreferrer"
+            >facebook</a
+          >
         </li>
-        <li><a href="" target="_blank" rel="noopener noreferrer">twiter</a></li>
+        <li class="header-soc-item">
+          <a
+            class="header-soc-link"
+            href=""
+            target="_blank"
+            rel="noopener noreferrer"
+            >twiter</a
+          >
+        </li>
       </ul>
     </header>
     <main>
