--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
       <nav class="header-navigation">
         <a class="header-logo" href="./index.html"
-          >SIMPLY CHOCOLATE
+          ><span class="span-italik">SIMPLY</span> CHOCOLATE
           <img
             class="header-logo-img"
             src="./img/chocolate-icon.svg"
@@ -24,9 +24,15 @@
           />
         </a>
         <ul class="header-menu-list">
-          <li class="header-menu-item"><a href="">Home</a></li>
-          <li class="header-menu-item"><a href="">How it’s made?</a></li>
-          <li class="header-menu-item"><a href="">Chocolate is loved</a></li>
+          <li class="header-menu-item">
+            <a href="" class="header-menu-link">Home</a>
+          </li>
+          <li class="header-menu-item">
+            <a href="" class="header-menu-link">How it’s made?</a>
+          </li>
+          <li class="header-menu-item">
+            <a href="" class="header-menu-link">Chocolate is loved</a>
+          </li>
         </ul>
       </nav>
       <ul class="header-soc-list">
@@ -59,31 +65,31 @@
         </li>
       </ul>
     </header>
-    <main>
-      <section>
-        <h1>
+    <main class="main">
+      <section class="hero">
+        <h1 class="hero-title">
           Treat yourself or a loved one to our finest ingredients for a moment
           of pure delight!
         </h1>
-        <button type="button">Buy now</button>
-        <a href="">How it’s made</a>
-        <a href="">scroll down</a>
+        <button type="button" class="button-buy-btn">Buy now</button>
+        <a href="" class="button-how-btn">How it’s made</a>
+        <a href="" class="button-scroll-btn">scroll down</a>
       </section>
-      <section>
+      <section class="section-first">
         <h2 hidden>Text</h2>
-        <ul>
-          <li>
-            <h3>Unsurpassed taste</h3>
-            <p>
+        <ul class="section-first-list">
+          <li class="section-first-item">
+            <h3 class="hero-section-first">Unsurpassed taste</h3>
+            <p class="text-section-first">
               Crafted with the finest quality cocoa beans and a dedication to
               perfection, each bite is a decadent experience that simply cannot
               be matched. Savor the richness and complexity of our Unsurpassed
               Taste and discover a new level of chocolate bliss.
             </p>
           </li>
-          <li>
-            <h3>Affordable price</h3>
-            <p>
+          <li class="section-first-item">
+            <h3 class="hero-section-first">Affordable price</h3>
+            <p class="text-section-first">
               Indulge in high-quality chocolate without breaking the bank with
               Simply Chocolate's selection of affordable treats. Enjoy
               mouth-watering truffles and velvety chocolate bars without
@@ -91,9 +97,9 @@
               affordable luxury today.
             </p>
           </li>
-          <li>
-            <h3>Own production</h3>
-            <p>
+          <li class="section-first-item">
+            <h3 class="hero-section-first">Own production</h3>
+            <p class="text-section-first">
               We take pride in our own production process, ensuring that every
               step is carefully crafted to perfection. From selecting the finest
               ingredients to handcrafting each piece, our attention to detail is
@@ -102,18 +108,21 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>IT ALL ADDS UP TO ONE EXCEPTIONAL TASTE SENSATION</h2>
-        <p>
+      <section class="chocolate-section">
+        <h2 class="hero-chocolate-section">
+          IT ALL ADDS UP TO ONE EXCEPTIONAL TASTE SENSATION
+        </h2>
+        <p class="chocolate-text-section">
           At Simply Chocolate, we believe that the secret to exceptional
           chocolate is in the details. From the sourcing of the finest
           ingredients to the careful crafting of each individual piece, every
           step of our process adds up to one exceptional taste sensation.
         </p>
 
-        <ul>
-          <li>
+        <ul class="chocolate-list-section">
+          <li class="chocolate-item-section">
             <img
+              class="img-chocolate-section"
               src="./img/img-taste-1/chocolate-milk.png"
               alt="MILK CHOCOLATE"
               width="214"
@@ -123,57 +132,63 @@
           </li>
           <li>
             <img
+              class="img-chocolate-section"
               src="./img/img-taste-1/milk.png"
               alt="MILK"
               width="214"
               height="160"
             />
-            <h3>MILK</h3>
+            <h3 class="hero-chocolate-title">MILK</h3>
           </li>
-          <li>
+          <li class="chocolate-item-section">
             <img
+              class="img-chocolate-section"
               src="./img/img-taste-1/nuts.png"
               alt="NUTS"
               width="214"
               height="160"
             />
-            <h3>NUTS</h3>
+            <h3 class="hero-chocolate-title">NUTS</h3>
           </li>
-          <li>
+          <li class="chocolate-item-section">
             <img
+              class="img-chocolate-section"
               src="./img/img-taste-1/semi-sweet-chocolate.png"
               alt="SEMI - SWEET CHOCOLATE"
               width="214"
               height="160"
             />
-            <h3>SEMI - SWEET CHOCOLATE</h3>
+            <h3 class="hero-chocolate-title">SEMI - SWEET CHOCOLATE</h3>
           </li>
-          <li>
+          <li class="chocolate-item-section">
             <img
+              class="img-chocolate-section"
               src="./img/img-taste-1/cacao.png"
               alt="CACAO"
               width="214"
               height="160"
             />
-            <h3>CACAO</h3>
+            <h3 class="hero-chocolate-title">CACAO</h3>
           </li>
           <li>
             <img
+              class="img-chocolate-section"
               src="./img/img-taste-1/raspberry.png"
               alt="RASPBERRY"
               width="214"
               height="160"
             />
-            <h3>RASPBERRY</h3>
+            <h3 class="hero-chocolate-title">RASPBERRY</h3>
           </li>
-          <li>
+          <li class="chocolate-item-section">
             <img
+              class="img-chocolate-section"
               src="./img/img-taste-1/cocos.png"
               alt="COCONUT"
               width="214"
               height="160"
             />
-            <h3>COCONUT OIL</h3>
+            <h3 class="hero-chocolate-title">COCONUT OIL</h3>
           </li>
         </ul>
       </section>
