--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <a href="" class="button-scroll-btn">scroll down</a>
       </section>
       <section class="section-first">
-        <h2 hidden>Text</h2>
+        <h2 class="visually-hidden">Text</h2>
         <ul class="section-first-list">
           <li class="section-first-item">
             <h3 class="hero-section-first">Unsurpassed taste</h3>
@@ -192,244 +192,289 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>HOW IT’S made?</h2>
+      <section class="section-made-chocolate">
+        <h2 class="made-hero">HOW IT’S made?</h2>
         <img
+          class="made-img-chocolate"
           src="./img/img-taste-1/image_chocolate.png"
           alt="image_chocolate"
           width="600"
           height="400"
         />
-        <h3>
+        <h3 class="made-hero-try">
           Try our chocolates today and discover the perfect balance of flavor
         </h3>
-        <ul>
-          <li>
-            <p>
+        <ul class="made-chocolate-list">
+          <li class="made-chocolate-item">
+            <p class="made-text-chocolate">
               Heat the milk in a saucepan without bringing it to a boil. Add
               sugar and cocoa powder.
             </p>
           </li>
-          <li>
-            <p>
+          <li class="made-chocolate-item">
+            <p class="made-text-chocolate">
               At the same time, prepare a water bath. Melt the butter on it.
             </p>
           </li>
-          <li>
-            <p>
+          <li class="made-chocolate-item">
+            <p class="made-text-chocolate">
               "Mix" the milk mixture and already liquid butter. Mix thoroughly
               with a silicone spatula so that the mass becomes uniform and
               silky.
             </p>
           </li>
-          <li>
-            <p>Heat the mixture over low heat, letting it barely boil.</p>
+          <li class="made-chocolate-item">
+            <p class="made-text-chocolate">
+              Heat the mixture over low heat, letting it barely boil.
+            </p>
           </li>
-          <li>
-            <p>
+          <li class="made-chocolate-item">
+            <p class="made-text-chocolate">
               Pour the chocolate into special containers (can be replaced with
               ice molds). Allow to cool and harden.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our PRODUCTS</h2>
-        <ul>
-          <li>
+      <section class="section-product">
+        <h2 class="product-hero">Our PRODUCTS</h2>
+        <ul class="product-list">
+          <li class="product-item">
             <img
               src="./img/img-taste-1/img-1-min.png"
               alt="ORANGE chocolate"
               width="230"
               height="201"
+              class="img-product"
             />
-            <h3>ORANGE</h3>
-            <p>Dark chocolate</p>
-            <button type="button">45 UAH</button>
+            <h3 class="product-hero-item">ORANGE</h3>
+            <p class="product-text-item">Dark chocolate</p>
+            <button class="button-product-item" type="button">45 UAH</button>
           </li>
-          <li>
+          <li class="product-item">
             <img
               src="./img/img-taste-1/img-2-min.png"
               alt="APPLE&CRANBERRY chocolate"
               width="230"
               height="201"
+              class="img-product"
             />
-            <h3>APPLE&CRANBERRY</h3>
-            <p>Milk chocolate</p>
-            <button type="button">50 UAH</button>
+            <h3 class="product-hero-item">APPLE&CRANBERRY</h3>
+            <p class="product-text-item">Milk chocolate</p>
+            <button class="button-product-item" type="button">50 UAH</button>
           </li>
-          <li>
+          <li class="product-item">
             <img
               src="./img/img-taste-1/img-3-min.png"
               alt="Dark chocolate chocolate"
               width="230"
               height="201"
+              class="img-product"
             />
-            <h3>Lime&sea salt</h3>
-            <p>Dark chocolate</p>
-            <button type="button">66 UAH</button>
+            <h3 class="product-hero-item">Lime&sea salt</h3>
+            <p class="product-text-item">Dark chocolate</p>
+            <button class="button-product-item" type="button">66 UAH</button>
           </li>
-          <li>
+          <li class="product-item">
             <img
               src="./img/img-taste-1/img-4-min.png"
               alt="PINEAPPLE CHOCOLATE"
               width="230"
               height="201"
+              class="img-product"
             />
-            <h3>PINEAPPLE</h3>
-            <p>Dark chocolate</p>
-            <button type="button">54 UAH</button>
+            <h3 class="product-hero-item">PINEAPPLE</h3>
+            <p class="product-text-item">Dark chocolate</p>
+            <button class="button-product-item" type="button">54 UAH</button>
           </li>
-          <li>
+          <li class="product-item">
             <img
               src="./img/img-taste-1/img-5-min.png"
               alt="Classic"
               width="230"
               height="201"
+              class="img-product"
             />
-            <h3>Classic</h3>
-            <p>Milk chocolate</p>
-            <button type="button">45 UAH</button>
+            <h3 class="product-hero-item">Classic</h3>
+            <p class="product-text-item">Milk chocolate</p>
+            <button class="button-product-item" type="button">45 UAH</button>
           </li>
-          <li>
+          <li class="product-item">
             <img
               src="./img/img-taste-1/img-6-min.png"
               alt="HONEY CHOCOLATE"
               width="230"
               height="201"
+              class="img-product"
             />
-            <h3>HONEY</h3>
-            <p>Milk chocolate</p>
-            <button type="button">50 UAH</button>
+            <h3 class="product-hero-item">HONEY</h3>
+            <p class="product-text-item">Milk chocolate</p>
+            <button class="button-product-item" type="button">50 UAH</button>
           </li>
-          <li>
+          <li class="product-item">
             <img
               src="./img/img-taste-1/img-7-min.png"
               alt="Roasted fruits CHOCOLATE"
               width="230"
               height="201"
+              class="img-product"
             />
-            <h3>Roasted fruits</h3>
-            <p>Dark chocolate</p>
-            <button type="button">66 UAH</button>
+            <h3 class="product-hero-item">Roasted fruits</h3>
+            <p class="product-text-item">Dark chocolate</p>
+            <button class="button-product-item" type="button">66 UAH</button>
           </li>
-          <li>
+          <li class="product-item">
             <img
               src="./img/img-taste-1/img-8-min.png"
               alt="White chocolate"
               width="230"
               height="201"
+              class="img-product"
             />
-            <h3>Classic</h3>
-            <p>White chocolate</p>
-            <button type="button">54 UAH</button>
+            <h3 class="product-hero-item">Classic</h3>
+            <p class="product-text-item">White chocolate</p>
+            <button class="button-product-item" type="button">54 UAH</button>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Top Sellers</h2>
-        <ul>
-          <li>
+      <section class="section-sellers">
+        <h2 class="hero-sellers">Top Sellers</h2>
+        <ul class="sellers-list">
+          <li class="sellers-item">
             <img
               src="./img/img-taste-1/img-1.png"
               alt="CHOCOLATE WITH NUTS"
               width="368"
               height="464"
+              class="sellers-img-item"
             />
-            <h3>CHOCOLATE WITH NUTS</h3>
+            <h3 class="hero-sellers">CHOCOLATE WITH NUTS</h3>
           </li>
-          <li>
+          <li class="sellers-item">
             <img
               src="./img/img-taste-1/img-2.png"
               alt="CHOCOLATE WITH FRUITS"
               width="368"
               height="464"
+              class="sellers-img-item"
             />
-            <h3>CHOCOLATE WITH FRUITS</h3>
+            <h3 class="hero-sellers">CHOCOLATE WITH FRUITS</h3>
           </li>
-          <li>
+          <li class="sellers-item">
             <img
               src="./img/img-taste-1/img-3.png"
               alt="DARK CHOCOLATE"
               width="368"
               height="464"
+              class="sellers-img-item"
             />
-            <h3>DARK CHOCOLATE</h3>
+            <h3 class="hero-sellers">DARK CHOCOLATE</h3>
           </li>
         </ul>
       </section>
-      <section>
-        <h3>Chocolate is loved</h3>
-        <ul>
-          <li>
+      <section class="section-chocolate-lovers">
+        <h3 class="hero-chocolate-lovers">Chocolate is loved</h3>
+        <ul class="chocolate-lovers-list">
+          <li class="chocolate-lovers-item">
             <img
               src="./img/img-taste-1/victoria_dobrzhanska.png"
               alt="Victoria Dobrzhanska"
               width="80"
               height="80"
+              class="chocolate-lovers-img"
             />
-            <h2>Victoria Dobrzhanska</h2>
-            <p>
+            <h2 class="subtitle-lovers">Victoria Dobrzhanska</h2>
+            <p class="chocolate-lovers-text">
               I love this chocolate bar. Perfect combination of light crispy
               wafer, covered in a thin layer chocolate.
             </p>
           </li>
-          <li>
+          <li class="chocolate-lovers-item">
             <img
               src="./img/img-taste-1/nazar_babenko.png"
               alt="Nazar Babenko"
               width="80"
               height="80"
+              class="chocolate-lovers-img"
             />
-            <h2>Nazar Babenko</h2>
-            <p>
+            <h2 class="subtitle-lovers">Nazar Babenko</h2>
+            <p class="chocolate-lovers-text">
               This chocolate confection is a delight! A delight! The wafer is
               light and crisp, the hazelnut cream is smooth, and the chocolate
               is good.
             </p>
           </li>
-          <li>
+          <li class="chocolate-lovers-item">
             <img
               src="./img/img-taste-1/olena_kampusch.png"
               alt="Olena Kampusch"
               width="80"
               height="80"
+              class="chocolate-lovers-img"
             />
-            <h2>Olena Kampusch</h2>
-            <p>
+            <h2 class="subtitle-lovers">Olena Kampusch</h2>
+            <p class="chocolate-lovers-text">
               Chocolate is a family favourite treat. Love the delicious smooth
               chocolate and the creaminess inside. The wafer is soft but
               crunchy.
             </p>
           </li>
-          <button type="button">Leave a review</button>
+          <button class="button-chocolate-lovers" type="button">
+            Leave a review
+          </button>
         </ul>
       </section>
     </main>
-    <footer>
-      <p>Chocolate a delicious cure for a bad day</p>
-      <p>Social networks</p>
-      <ul>
-        <li>
-          <a href="" target="_blank" rel="noopener noopener"></a>instagram
+    <footer class="footer-chocolate">
+      <p class="footer-subtitle">Chocolate a delicious cure for a bad day</p>
+      <p class="subtitle-text">Social networks</p>
+      <ul class="footer-list">
+        <li class="footer-item">
+          <a
+            class="footer-logo"
+            href=""
+            target="_blank"
+            rel="noopener noopener"
+          ></a
+          >instagram
         </li>
-        <li><a href="" target="_blank" rel="noopener noopener"></a>facebook</li>
-        <li><a href="" target="_blank" rel="noopener noopener"></a>twiter</li>
+        <li class="footer-item">
+          <a
+            class="footer-logo"
+            href=""
+            target="_blank"
+            rel="noopener noopener"
+          ></a
+          >facebook
+        </li>
+        <li class="footer-item">
+          <a
+            class="footer-logo"
+            href=""
+            target="_blank"
+            rel="noopener noopener"
+          ></a
+          >twiter
+        </li>
       </ul>
-      <p>Contact us</p>
-      <address>
-        <ul>
-          <li><a href="tel:+380684439426">+380 (68) 443-94-26</a></li>
-          <li>
-            <a href="mailto:simplychoc@gmail.com">simplychoc@gmail.com</a>
+      <p class="footer-paragraf">Contact us</p>
+      <address class="footer-address">
+        <ul class="footer-address-list">
+          <li class="footer-item-contact">
+            <a href="tel:+380684439426">+380 (68) 443-94-26</a>
+          </li>
+          <li class="footer-item-contact">
+            <a class="footer-logo-address" href="mailto:simplychoc@gmail.com"
+              >simplychoc@gmail.com</a
+            >
           </li>
         </ul>
       </address>
-      <nav>
-        <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">How it’s made?</a></li>
-          <li><a href="">Chocolate is loved</a></li>
+      <nav class="footer-navi">
+        <ul class="footer-navi-list">
+          <li class="footer-navi-item"><a href="">Home</a></li>
+          <li class="footer-navi-item"><a href="">How it’s made?</a></li>
+          <li class="footer-navi-item"><a href="">Chocolate is loved</a></li>
         </ul>
       </nav>
     </footer>
