--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               width="214"
               height="160"
             />
-            <h3>MILK CHOCOLATE</h3>
+            <h3 class="hero-chocolate-title">MILK CHOCOLATE</h3>
           </li>
           <li>
             <img
@@ -138,7 +138,7 @@
               width="214"
               height="160"
             />
-            <h3 class="hero-chocolate-title">MILK</h3>
+            <h3 class="hero-chocolate-title chocolate-color-dark">MILK</h3>
           </li>
           <li class="chocolate-item-section">
             <img
@@ -158,7 +158,9 @@
               width="214"
               height="160"
             />
-            <h3 class="hero-chocolate-title">SEMI - SWEET CHOCOLATE</h3>
+            <h3 class="hero-chocolate-title chocolate-color-dark">
+              SEMI - SWEET CHOCOLATE
+            </h3>
           </li>
           <li class="chocolate-item-section">
             <img
@@ -178,7 +180,7 @@
               width="214"
               height="160"
             />
-            <h3 class="hero-chocolate-title">RASPBERRY</h3>
+            <h3 class="hero-chocolate-title chocolate-color-dark">RASPBERRY</h3>
           </li>
           <li class="chocolate-item-section">
             <img
@@ -348,7 +350,7 @@
               height="464"
               class="sellers-img-item"
             />
-            <h3 class="hero-sellers">CHOCOLATE WITH NUTS</h3>
+            <h3 class="hero-sellers-hero">CHOCOLATE WITH NUTS</h3>
           </li>
           <li class="sellers-item">
             <img
@@ -358,7 +360,7 @@
               height="464"
               class="sellers-img-item"
             />
-            <h3 class="hero-sellers">CHOCOLATE WITH FRUITS</h3>
+            <h3 class="hero-sellers-hero">CHOCOLATE WITH FRUITS</h3>
           </li>
           <li class="sellers-item">
             <img
@@ -368,7 +370,7 @@
               height="464"
               class="sellers-img-item"
             />
-            <h3 class="hero-sellers">DARK CHOCOLATE</h3>
+            <h3 class="hero-sellers-hero">DARK CHOCOLATE</h3>
           </li>
         </ul>
       </section>
@@ -461,7 +463,9 @@
       <address class="footer-address">
         <ul class="footer-address-list">
           <li class="footer-item-contact">
-            <a href="tel:+380684439426">+380 (68) 443-94-26</a>
+            <a class="footer-logo-address" href="tel:+380684439426"
+              >+380 (68) 443-94-26</a
+            >
           </li>
           <li class="footer-item-contact">
             <a class="footer-logo-address" href="mailto:simplychoc@gmail.com"
@@ -475,6 +479,7 @@
           <li class="footer-navi-item"><a href="">Home</a></li>
           <li class="footer-navi-item"><a href="">How it’s made?</a></li>
           <li class="footer-navi-item"><a href="">Chocolate is loved</a></li>
+          <button class="button-footer" type="button">Subscribe</button>
         </ul>
       </nav>
     </footer>
